--- a/.github/workflows/scan-pr.yml
+++ b/.github/workflows/scan-pr.yml
@@ -52,5 +52,5 @@ jobs:
           # JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
           
           # [Optional, default: "FALSE"]
-          # Displays all existing vulnerabilities, including the ones that were added by the pull request.
+          # Displays all existing vulnerabilities, including the ones that were added by the pull request..
           JF_INCLUDE_ALL_VULNERABILITIES: "TRUE"
