--- a/.frogbot/frogbot-config.yml
+++ b/.frogbot/frogbot-config.yml
@@ -11,7 +11,7 @@
       # [Mandatory]
       # List of branches to scan
       branches:
-        - master
+        - main
 
     # Frogbot scanning parameters
     scan:
